Segundo commit de la prueba

--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -7,8 +7,8 @@
             </select>
             <input type="text" class="agregar_descripcion" placeholder="Agregar Descripción">
             <input type="number" class="agregar_valor" placeholder="Valor">
+            <input type="text" class="agregar_descripcion" placeholder="No sirve de nada">
             <button class="agregar_btn"><i class="ion-ios-checkmark-outline"></i></button>
         </div>
     </div>
   </form>
-  
