Dando formato con prettier

--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,14 +1,24 @@
 <form>
-    <div class="agregar">
-        <div class="agregar_contenedor">
-            <select class="agregar_tipo">
-                <option value="ing" selected>+</option>
-                <option value="egr">-</option>
-            </select>
-            <input type="text" class="agregar_descripcion" placeholder="Agregar Descripción">
-            <input type="number" class="agregar_valor" placeholder="Valor">
-            <input type="text" class="agregar_descripcion" placeholder="No sirve de nada">
-            <button class="agregar_btn"><i class="ion-ios-checkmark-outline"></i></button>
-        </div>
+  <div class="agregar">
+    <div class="agregar_contenedor">
+      <select class="agregar_tipo">
+        <option value="ing" selected>+</option>
+        <option value="egr">-</option>
+      </select>
+      <input
+        type="text"
+        class="agregar_descripcion"
+        placeholder="Agregar Descripción"
+      />
+      <input type="number" class="agregar_valor" placeholder="Valor" />
+      <input
+        type="text"
+        class="agregar_descripcion"
+        placeholder="No sirve de nada"
+      />
+      <button class="agregar_btn">
+        <i class="ion-ios-checkmark-outline"></i>
+      </button>
     </div>
-  </form>
+  </div>
+</form>
